// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1_dimColor 1`] = `
{
  "annotation": {},
  "chartType": "funnel",
  "config": {
    "funnel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "funnel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "A-2019-利润",
      "__Dim_Color__": "A-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2019-销售额",
      "__Dim_Color__": "A-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "B-2019-利润",
      "__Dim_Color__": "B-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "B-2019-销售额",
      "__Dim_Color__": "B-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "C-2019-利润",
      "__Dim_Color__": "C-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "C-2019-销售额",
      "__Dim_Color__": "C-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "D-2019-利润",
      "__Dim_Color__": "D-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "D-2019-销售额",
      "__Dim_Color__": "D-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "E-2019-利润",
      "__Dim_Color__": "E-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "E-2019-销售额",
      "__Dim_Color__": "E-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "A-2020-利润",
      "__Dim_Color__": "A-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2020-销售额",
      "__Dim_Color__": "A-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "B-2020-利润",
      "__Dim_Color__": "B-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "B-2020-销售额",
      "__Dim_Color__": "B-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "C-2020-利润",
      "__Dim_Color__": "C-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "C-2020-销售额",
      "__Dim_Color__": "C-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "D-2020-利润",
      "__Dim_Color__": "D-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "D-2020-销售额",
      "__Dim_Color__": "D-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "E-2020-利润",
      "__Dim_Color__": "E-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "E-2020-销售额",
      "__Dim_Color__": "E-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 20,
          "max": 100,
          "min": 10,
          "sum": 960,
        },
      },
      "id": "funnel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "A-2019-利润": "A-2019-利润",
          "A-2019-销售额": "A-2019-销售额",
          "A-2020-利润": "A-2020-利润",
          "A-2020-销售额": "A-2020-销售额",
          "B-2019-利润": "B-2019-利润",
          "B-2019-销售额": "B-2019-销售额",
          "B-2020-利润": "B-2020-利润",
          "B-2020-销售额": "B-2020-销售额",
          "C-2019-利润": "C-2019-利润",
          "C-2019-销售额": "C-2019-销售额",
          "C-2020-利润": "C-2020-利润",
          "C-2020-销售额": "C-2020-销售额",
          "D-2019-利润": "D-2019-利润",
          "D-2019-销售额": "D-2019-销售额",
          "D-2020-利润": "D-2020-利润",
          "D-2020-销售额": "D-2020-销售额",
          "E-2019-利润": "E-2019-利润",
          "E-2019-销售额": "E-2019-销售额",
          "E-2020-利润": "E-2020-利润",
          "E-2020-销售额": "E-2020-销售额",
        },
        "colorItems": [
          "A-2019-利润",
          "A-2019-销售额",
          "B-2019-利润",
          "B-2019-销售额",
          "C-2019-利润",
          "C-2019-销售额",
          "D-2019-利润",
          "D-2019-销售额",
          "E-2019-利润",
          "E-2019-销售额",
          "A-2020-利润",
          "A-2020-销售额",
          "B-2020-利润",
          "B-2020-销售额",
          "C-2020-利润",
          "C-2020-销售额",
          "D-2020-利润",
          "D-2020-销售额",
          "E-2020-利润",
          "E-2020-销售额",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "类型",
      "encoding": "color",
      "id": "type",
    },
    {
      "alias": "日期",
      "encoding": "color",
      "id": "date",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "type",
      "date",
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
    ],
    "label": [],
    "size": [
      "profit",
      "sales",
    ],
    "tooltip": [
      "type",
      "date",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "children": [
        {
          "alias": "利润",
          "encoding": "size",
          "id": "profit",
          "parentId": "1",
        },
        {
          "alias": "销售额",
          "encoding": "size",
          "id": "sales",
          "parentId": "1",
        },
      ],
      "id": "1",
    },
  ],
}
`;

exports[`1_dimColor 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "A-2019-利润",
      "A-2019-销售额",
      "B-2019-利润",
      "B-2019-销售额",
      "C-2019-利润",
      "C-2019-销售额",
      "D-2019-利润",
      "D-2019-销售额",
      "E-2019-利润",
      "E-2019-销售额",
      "A-2020-利润",
      "A-2020-销售额",
      "B-2020-利润",
      "B-2020-销售额",
      "C-2020-利润",
      "C-2020-销售额",
      "D-2020-利润",
      "D-2020-销售额",
      "E-2020-利润",
      "E-2020-销售额",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "funnel",
    "values": [
      {
        "__Dim_ColorId__": "A-2019-利润",
        "__Dim_Color__": "A-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2019-销售额",
        "__Dim_Color__": "A-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "B-2019-利润",
        "__Dim_Color__": "B-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "B-2019-销售额",
        "__Dim_Color__": "B-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "C-2019-利润",
        "__Dim_Color__": "C-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "C-2019-销售额",
        "__Dim_Color__": "C-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "D-2019-利润",
        "__Dim_Color__": "D-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "D-2019-销售额",
        "__Dim_Color__": "D-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "E-2019-利润",
        "__Dim_Color__": "E-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "E-2019-销售额",
        "__Dim_Color__": "E-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "A-2020-利润",
        "__Dim_Color__": "A-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2020-销售额",
        "__Dim_Color__": "A-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "B-2020-利润",
        "__Dim_Color__": "B-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "B-2020-销售额",
        "__Dim_Color__": "B-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "C-2020-利润",
        "__Dim_Color__": "C-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "C-2020-销售额",
        "__Dim_Color__": "C-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "D-2020-利润",
        "__Dim_Color__": "D-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "D-2020-销售额",
        "__Dim_Color__": "D-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "E-2020-利润",
        "__Dim_Color__": "E-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "E-2020-销售额",
        "__Dim_Color__": "E-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
    ],
  },
  "funnel": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "cornerRadius": 4,
    },
  },
  "isTransform": true,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "maxSize": "75%",
  "minSize": "10%",
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "shape": "rect",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "transformLabel": {
    "visible": true,
  },
  "type": "funnel",
  "valueField": "__MeaValue__",
}
`;

exports[`1_dimColor 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "A-2019-利润": "A-2019-利润",
    "A-2019-销售额": "A-2019-销售额",
    "A-2020-利润": "A-2020-利润",
    "A-2020-销售额": "A-2020-销售额",
    "B-2019-利润": "B-2019-利润",
    "B-2019-销售额": "B-2019-销售额",
    "B-2020-利润": "B-2020-利润",
    "B-2020-销售额": "B-2020-销售额",
    "C-2019-利润": "C-2019-利润",
    "C-2019-销售额": "C-2019-销售额",
    "C-2020-利润": "C-2020-利润",
    "C-2020-销售额": "C-2020-销售额",
    "D-2019-利润": "D-2019-利润",
    "D-2019-销售额": "D-2019-销售额",
    "D-2020-利润": "D-2020-利润",
    "D-2020-销售额": "D-2020-销售额",
    "E-2019-利润": "E-2019-利润",
    "E-2019-销售额": "E-2019-销售额",
    "E-2020-利润": "E-2020-利润",
    "E-2020-销售额": "E-2020-销售额",
  },
  "colorItems": [
    "A-2019-利润",
    "A-2019-销售额",
    "B-2019-利润",
    "B-2019-销售额",
    "C-2019-利润",
    "C-2019-销售额",
    "D-2019-利润",
    "D-2019-销售额",
    "E-2019-利润",
    "E-2019-销售额",
    "A-2020-利润",
    "A-2020-销售额",
    "B-2020-利润",
    "B-2020-销售额",
    "C-2020-利润",
    "C-2020-销售额",
    "D-2020-利润",
    "D-2020-销售额",
    "E-2020-利润",
    "E-2020-销售额",
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
